--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 										<p style="font-size:22px;font-family:Georgia, &#39;Times New Roman&#39;, Times, serif"><b>Biography</b></p>
 						
 						<p>
-							I am currently a research scholar at University of Pennsylvania, working with Prof. <a href="https://www.cis.upenn.edu/~danroth/">Prof. Dan Roth</a>. In 2021, I got my Ph.D. degree from HKUST, supervised by <a href="https://www.cse.ust.hk/~yqsong/">Prof.
+							I am currently a senior research scientist at Tencent AI Lab, Seattle. Before that, I was a research scholar at University of Pennsylvania, working with Prof. <a href="https://www.cis.upenn.edu/~danroth/">Prof. Dan Roth</a>. In 2021, I got my Ph.D. degree from HKUST, supervised by <a href="https://www.cse.ust.hk/~yqsong/">Prof.
 								Yangqiu Song</a>. Before that, I received my MPhil. degree from the TLE program, HKUST in 2018 and B.E.degree from the ECE department, HKUST in 2016. 
 
 								My research interest is primarily on commonsense reasoning and multi-modal event understanding. Specifically, I aim at building a large-scale eventuality-centric knowledge graph to connect different modalities and help machines understand the event-centric commonsense. 
