--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@ IEEE Transactions on Neural Networks and Learning Systems; NeuralComputing.
 		</tbody>
 		
 	</table>
-<a href="https://clustrmaps.com/site/1blf3"  title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=O7EyqvpPsSAHEoDepz6vZxwhNEsZuVnjs0mZmdtIcug&cl=ffffff" /></a>
+<a href="https://clustrmaps.com/site/1blf3"  title="Visit tracker" style="margin-left: 15%;"><img src="//www.clustrmaps.com/map_v2.png?d=O7EyqvpPsSAHEoDepz6vZxwhNEsZuVnjs0mZmdtIcug&cl=ffffff" /></a>
 	</br></br>
 
 </body>
