--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-	<title>Hongming Zhang, PhD@HKUST</title>
+	<title>Hongming Zhang</title>
 
 
 	<meta name="keywords" content="Hongming Zhang, hkust, natural language understanding, knowledge graph, commonsense knowledge">
