--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
 						<p style="font-size:22px;font-family:Georgia, &#39;Times New Roman&#39;, Times, serif"><b>News</b></p>
 						<div class="two-col-container">
 							<ul>
+								<li>11/2021: One paper about automated API detection was accepted to ICSE 2022.</li>
 								<li>08/2021: Four papers were accepted to EMNLP 2021 main conference. Topics include commonsense, coreference, and event information extraction.</li>
 								<li>08/2021: One paper about pragmatics was accepted to AKBC 2021.</li>
 								<li>08/2021: Invited to serve as the PC of IJCAI 2022 and AAAI 2022.</li>
@@ -300,7 +301,14 @@
 							</ul>
 						</span></div>
 			            <div><span style="">
+							<p style="font-size:18px">2022</p>
 
+<ul>
+	<li>Yintong Huo, Yuxin Su, <b>Hongming Zhang</b>, and Michael Lyu.
+									ARCLIN: Automated API Mention Resolution for Unformatted Texts.
+									the IEEE/ACM International Conference on Software Engineering (ICSE). 2022.
+								</li>
+</ul>
 							<p style="font-size:18px">2021</p>
 
 <ul>
