--- a/index.html
+++ b/index.html
@@ -307,7 +307,10 @@
 	<li>Yintong Huo, Yuxin Su, <b>Hongming Zhang</b>, and Michael Lyu.
 									ARCLIN: Automated API Mention Resolution for Unformatted Texts.
 									the IEEE/ACM International Conference on Software Engineering (ICSE). 2022.
+		<a href="https://aclanthology.org/2021.findings-acl.114/">[PAPER]</a>
+									<a href="https://cogcomp.seas.upenn.edu/page/publication_view/942">[CODE & DATA]</a>
 								</li>
+
 </ul>
 							<p style="font-size:18px">2021</p>
 
@@ -315,24 +318,33 @@
 	<li>Haoyu Wang, <b>Hongming Zhang</b>, Muhao Chen and Dan Roth.
 									Learning Constraints and Descriptive Segmentation for Subevent Detection.
 									Conference on Empirical Methods in Natural Language Processing (EMNLP). 2021.
+		<a href="https://arxiv.org/abs/2201.01459">[PAPER]</a>
 								</li>
 								<li>Yanai Elazar, <b>Hongming Zhang</b>, Yoav Goldberg and Dan Roth
 .
 									Back to Square One: Bias Detection, Training and Commonsense Disentanglement in the Winograd Schema.
 									Conference on Empirical Methods in Natural Language Processing (EMNLP). 2021.
+									<a href="https://aclanthology.org/2021.emnlp-main.819.pdf">[PAPER]</a>
+									<a href="https://github.com/yanaiela/winograd_square_one/">[CODE & DATA]</a>
 								</li>
 								<li>Xintong Yu, <b>Hongming Zhang</b>, Yangqiu Song, Changshui Zhang, Kun Xu and Dong Yu
 .
 									Exophoric Pronoun Resolution in Dialogues with Topic Regularization.
 									Conference on Empirical Methods in Natural Language Processing (EMNLP). 2021.
+									<a href="https://aclanthology.org/2021.emnlp-main.311.pdf">[PAPER]</a>
+									<a href="https://github.com/hkust-knowcomp/exo-pcr">[CODE & DATA]</a>
 								</li>
 								<li>Tianqing Fang, Weiqi Wang, Sehyun Choi, Shibo Hao, <b>Hongming Zhang</b>, Yangqiu Song and Bin He
 .
 									Benchmarking Commonsense Knowledge Base Population with an Effective Evaluation Dataset.
 									Conference on Empirical Methods in Natural Language Processing (EMNLP). 2021.
+									<a href="https://aclanthology.org/2021.emnlp-main.705.pdf">[PAPER]</a>
+									<a href="https://github.com/HKUST-KnowComp/CSKB-Population">[CODE & DATA]</a>
 								</li>
 								<li>Tianqing Fang, Haojie Pan, <b>Hongming Zhang</b>, Yangqiu Song, Kun Xu, Dong Yu.
 									Do Boat and Ocean Suggest Beach? Dialogue Summarization with External Knowledge. Conference on Automated Knowledge Base Construction (AKBC). 2021.
+									<a href="https://www.akbc.ws/2021/assets/pdfs/AJKd0iIFMDc.pdf">[PAPER]</a>
+									<a href="https://github.com/HKUST-KnowComp/CODC-Dialogue-Summarization">[CODE & DATA]</a>
 								</li>
 									<li><b>Hongming Zhang</b>, Haoyu Wang, and Dan Roth.
 									Zero-shot Label-Aware Event Trigger and Argument Classification. Annual Meeting of the Association for Computational Linguistics (ACL) Findings. 2021.
