--- a/index.html
+++ b/index.html
@@ -307,8 +307,7 @@
 	<li>Yintong Huo, Yuxin Su, <b>Hongming Zhang</b>, and Michael Lyu.
 									ARCLIN: Automated API Mention Resolution for Unformatted Texts.
 									the IEEE/ACM International Conference on Software Engineering (ICSE). 2022.
-		<a href="https://aclanthology.org/2021.findings-acl.114/">[PAPER]</a>
-									<a href="https://cogcomp.seas.upenn.edu/page/publication_view/942">[CODE & DATA]</a>
+		<a href="https://arxiv.org/abs/2201.01459">[PAPER]</a>
 								</li>
 
 </ul>
@@ -318,7 +317,9 @@
 	<li>Haoyu Wang, <b>Hongming Zhang</b>, Muhao Chen and Dan Roth.
 									Learning Constraints and Descriptive Segmentation for Subevent Detection.
 									Conference on Empirical Methods in Natural Language Processing (EMNLP). 2021.
-		<a href="https://arxiv.org/abs/2201.01459">[PAPER]</a>
+
+		<a href="https://aclanthology.org/2021.emnlp-main.423.pdf">[PAPER]</a>
+									<a href="https://githubplus.com/CogComp/Subevent_EventSeg">[CODE & DATA]</a>
 								</li>
 								<li>Yanai Elazar, <b>Hongming Zhang</b>, Yoav Goldberg and Dan Roth
 .
