--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
 						<p style="font-size:22px;font-family:Georgia, &#39;Times New Roman&#39;, Times, serif"><b>News</b></p>
 						<div class="two-col-container">
 							<ul>
+								<li>01/2022: One paper about applying coreference resolution for better dialogue understanding is accepted to Pattern Recognition.</li>
 								<li>11/2021: One paper about automated API detection was accepted to ICSE 2022.</li>
 								<li>08/2021: Four papers were accepted to EMNLP 2021 main conference. Topics include commonsense, coreference, and event information extraction.</li>
 								<li>08/2021: One paper about pragmatics was accepted to AKBC 2021.</li>
@@ -304,6 +305,10 @@
 							<p style="font-size:18px">2022</p>
 
 <ul>
+	<li>Xintong Yu, <b>Hongming Zhang</b>, Ruixing Hong, Yangqiu Song, and Changshui Zhang.
+									CD-PCR: Improving Visual Dialog with Pronoun Coreference Resolution.
+									Pattern Recognition. 2022.
+								</li>
 	<li>Yintong Huo, Yuxin Su, <b>Hongming Zhang</b>, and Michael Lyu.
 									ARCLIN: Automated API Mention Resolution for Unformatted Texts.
 									the IEEE/ACM International Conference on Software Engineering (ICSE). 2022.
