--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
 <ul>
 	<li>Xintong Yu, <b>Hongming Zhang</b>, Ruixing Hong, Yangqiu Song, and Changshui Zhang.
 									CD-PCR: Improving Visual Dialog with Pronoun Coreference Resolution.
-									Pattern Recognition. 2022.
+									Pattern Recognition (PR). 2022.
 								</li>
 	<li>Yintong Huo, Yuxin Su, <b>Hongming Zhang</b>, and Michael Lyu.
 									ARCLIN: Automated API Mention Resolution for Unformatted Texts.
