Upload ACL 2022 papers

--- a/index.html
+++ b/index.html
@@ -149,6 +149,8 @@
 						<p style="font-size:22px;font-family:Georgia, &#39;Times New Roman&#39;, Times, serif"><b>News</b></p>
 						<div class="two-col-container">
 							<ul>
+								<li>02/2022: I am happy to received the HKUST Engineering PhD Research Excellence Award.</li>
+								<li>02/2022: Two papers about commonsense knowledge and word sense disambiguation are accepted by ACL 2022.</li>
 								<li>01/2022: One paper about applying coreference resolution for better dialogue understanding is accepted to Pattern Recognition.</li>
 								<li>11/2021: One paper about automated API detection was accepted to ICSE 2022.</li>
 								<li>08/2021: Four papers were accepted to EMNLP 2021 main conference. Topics include commonsense, coreference, and event information extraction.</li>
@@ -242,7 +244,7 @@
 								</li>
 
 								<li>Changlong Yu*, <b>Hongming Zhang*</b>, Yangqiu Song, and Wilfred Ng.
-									CoCoLM: COmplex COmmonsense Enhanced Language Model. ArXiv Preprint. 2020.
+									CoCoLM: COmplex COmmonsense Enhanced Language Model. Annual Meeting of the Association for Computational Linguistics (ACL) Findings. 2022.
 									<a href="https://arxiv.org/abs/2012.15643">[PAPER]</a>
 									<a href="https://github.com/HKUST-KnowComp/CoCoLM">[CODE & DATA]</a>
 								</li>
@@ -305,6 +307,13 @@
 							<p style="font-size:18px">2022</p>
 
 <ul>
+	<li>Changlong Yu*, <b>Hongming Zhang*</b>, Yangqiu Song, and Wilfred Ng.
+									CoCoLM: COmplex COmmonsense Enhanced Language Model. Annual Meeting of the Association for Computational Linguistics (ACL) Findings. 2022.
+									<a href="https://arxiv.org/abs/2012.15643">[PAPER]</a>
+									<a href="https://github.com/HKUST-KnowComp/CoCoLM">[CODE & DATA]</a>
+								</li>
+	<li>Ying Su, <b>Hongming Zhang</b>, Yangqiu Song, and Tong Zhang. Rare and Zero-shot Word Sense Disambiguation using Z-Reweighting. Annual Meeting of the Association for Computational Linguistics (ACL) Findings. 2021.<a href="https://github.com/suytingwan/WSD-Z-reweighting">[CODE & DATA]</a>
+	</li>
 	<li>Xintong Yu, <b>Hongming Zhang</b>, Ruixing Hong, Yangqiu Song, and Changshui Zhang.
 									CD-PCR: Improving Visual Dialog with Pronoun Coreference Resolution.
 									Pattern Recognition (PR). 2022.
@@ -501,6 +510,7 @@
 						<p style="font-size:22px;font-family:Georgia, &#39;Times New Roman&#39;, Times, serif"><b>Selected Awards</b></p>
 						<span>
 							<ul>
+								<li>HKUST Engineering PhD Research Excellence Award. HKUST (Feb 2022)</li>
 								<li>SENG Academic Award for Continuing PhD students, HKUST (Sep 2020)</li>
 								<li>Microsoft Research Asia Fellowship, Microsoft (Nov 2019)</li>
 								<li>Tencent Rhino-Bird Scholarship, Tencent (Oct 2019)</li>
