Upload ACL 2022 papers

--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
 									<a href="https://arxiv.org/abs/2012.15643">[PAPER]</a>
 									<a href="https://github.com/HKUST-KnowComp/CoCoLM">[CODE & DATA]</a>
 								</li>
-	<li>Ying Su, <b>Hongming Zhang</b>, Yangqiu Song, and Tong Zhang. Rare and Zero-shot Word Sense Disambiguation using Z-Reweighting. Annual Meeting of the Association for Computational Linguistics (ACL) Findings. 2021.<a href="https://github.com/suytingwan/WSD-Z-reweighting">[CODE & DATA]</a>
+	<li>Ying Su, <b>Hongming Zhang</b>, Yangqiu Song, and Tong Zhang. Rare and Zero-shot Word Sense Disambiguation using Z-Reweighting. Annual Meeting of the Association for Computational Linguistics (ACL). 2021.<a href="https://github.com/suytingwan/WSD-Z-reweighting">[CODE & DATA]</a>
 	</li>
 	<li>Xintong Yu, <b>Hongming Zhang</b>, Ruixing Hong, Yangqiu Song, and Changshui Zhang.
 									CD-PCR: Improving Visual Dialog with Pronoun Coreference Resolution.
