Upload ACL 2022 papers

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 						<p style="font-size:22px;font-family:Georgia, &#39;Times New Roman&#39;, Times, serif"><b>News</b></p>
 						<div class="two-col-container">
 							<ul>
-								<li>02/2022: I am happy to received the HKUST Engineering PhD Research Excellence Award.</li>
+								<li>02/2022: I am happy to received the HKUST Engineering PhD Research Excellence Finalist Award.</li>
 								<li>02/2022: Two papers about commonsense knowledge and word sense disambiguation are accepted by ACL 2022.</li>
 								<li>01/2022: One paper about applying coreference resolution for better dialogue understanding is accepted to Pattern Recognition.</li>
 								<li>11/2021: One paper about automated API detection was accepted to ICSE 2022.</li>
@@ -510,7 +510,7 @@
 						<p style="font-size:22px;font-family:Georgia, &#39;Times New Roman&#39;, Times, serif"><b>Selected Awards</b></p>
 						<span>
 							<ul>
-								<li>HKUST Engineering PhD Research Excellence Award. HKUST (Feb 2022)</li>
+								<li>HKUST Engineering PhD Research Excellence Finalist Award. HKUST (Feb 2022)</li>
 								<li>SENG Academic Award for Continuing PhD students, HKUST (Sep 2020)</li>
 								<li>Microsoft Research Asia Fellowship, Microsoft (Nov 2019)</li>
 								<li>Tencent Rhino-Bird Scholarship, Tencent (Oct 2019)</li>
