Upload NAACL 2022 papers

--- a/index.html
+++ b/index.html
@@ -149,6 +149,8 @@
 						<p style="font-size:22px;font-family:Georgia, &#39;Times New Roman&#39;, Times, serif"><b>News</b></p>
 						<div class="two-col-container">
 							<ul>
+								<li>04/2022: Two papers about reasoning over KGs and explainable QA systems were accepted to NAACL 2022 Findings.</li>
+								<li>04/2022: One paper about pronoun coreference resolution was accepted to LREC 2022.</li>
 								<li>02/2022: I am happy to received the HKUST Engineering PhD Research Excellence Finalist Award.</li>
 								<li>02/2022: Two papers about commonsense knowledge and word sense disambiguation are accepted by ACL 2022.</li>
 								<li>01/2022: One paper about applying coreference resolution for better dialogue understanding is accepted to Pattern Recognition.</li>
@@ -307,6 +309,9 @@
 							<p style="font-size:18px">2022</p>
 
 <ul>
+	<li>Raixing Hong, Hongming Zhang, Xintong Yu, and Changshui Zhang. METGEN: A Module-based Entailment Tree Generation Framework for Answer Explanation. Findings of NAACL. 2022.</li>
+	<li>Jiaxin Bai, Zihao Wang, <b>Hongming Zhang</b>, and Yangqiu Song. Query2Particles: Knowledge Graph Reasoning with Particle Embeddings. Findings of NAACL. 2022.</li>
+	<li>Xinran Zhao, <b>Hongming Zhang</b>, and Yangqiu Song. PCR4ALL: A Comprehensive Evaluation Benchmark for Pronoun Coreference Resolution in English. Language Resources and Evaluation (LREC). 2022.</li>
 	<li>Changlong Yu*, <b>Hongming Zhang*</b>, Yangqiu Song, and Wilfred Ng.
 									CoCoLM: COmplex COmmonsense Enhanced Language Model. Annual Meeting of the Association for Computational Linguistics (ACL) Findings. 2022.
 									<a href="https://arxiv.org/abs/2012.15643">[PAPER]</a>
