Upload NAACL 2022 papers

--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
 							<p style="font-size:18px">2022</p>
 
 <ul>
-	<li>Hantian Ding, Jinrui Yang, Yuqian Deng, Hongming Zhang, and Dan Roth. Towards Open-Domain Topic Classification. NAACL 2022 Demo Track.</li>
+	<li>Hantian Ding, Jinrui Yang, Yuqian Deng, <b>Hongming Zhang</b>, and Dan Roth. Towards Open-Domain Topic Classification. NAACL 2022 Demo Track.</li>
 	<li>Raixing Hong, <b>Hongming Zhang</b>, Xintong Yu, and Changshui Zhang. METGEN: A Module-based Entailment Tree Generation Framework for Answer Explanation. Findings of NAACL 2022.</li>
 	<li>Jiaxin Bai, Zihao Wang, <b>Hongming Zhang</b>, and Yangqiu Song. Query2Particles: Knowledge Graph Reasoning with Particle Embeddings. Findings of NAACL 2022.</li>
 	<li>Xinran Zhao, <b>Hongming Zhang</b>, and Yangqiu Song. PCR4ALL: A Comprehensive Evaluation Benchmark for Pronoun Coreference Resolution in English. Language Resources and Evaluation (LREC). 2022.</li>
