Upload NAACL 2022 papers

--- a/index.html
+++ b/index.html
@@ -149,6 +149,9 @@
 						<p style="font-size:22px;font-family:Georgia, &#39;Times New Roman&#39;, Times, serif"><b>News</b></p>
 						<div class="two-col-container">
 							<ul>
+								<li>05/2022: One paper about acquiring commonsense causality between daily events has been accepted to ICML 2022.</li>
+								<li>05/2022: Our ASER paper has been accepted to Artificial Intelligence.</li>
+								<li>05/2022: Invited to serve as the reviewer for ECCV 2022.</li>
 								<li>04/2022: Our zero-shot topic classification system has been accepted as one of the NAACL 2022 Demo paper.</li>
 								<li>04/2022: Two papers about reasoning over KGs and explainable QA systems were accepted to NAACL 2022 Findings.</li>
 								<li>04/2022: One paper about pronoun coreference resolution was accepted to LREC 2022.</li>
@@ -307,9 +310,13 @@
 							</ul>
 						</span></div>
 			            <div><span style="">
+
+
+							<h2>Conference Publications</h2>
 							<p style="font-size:18px">2022</p>
 
 <ul>
+	<li>Jiayao Zhang, <b>Hongming Zhang</b>, Weijie Su, and Dan Roth. Causal Inference Principles for Reasoning about Commonsense Causality. International Conference of Machine Learning (ICML). 2022.</li>
 	<li>Hantian Ding, Jinrui Yang, Yuqian Deng, <b>Hongming Zhang</b>, and Dan Roth. Towards Open-Domain Topic Classification. NAACL 2022 Demo Track.</li>
 	<li>Raixing Hong, <b>Hongming Zhang</b>, Xintong Yu, and Changshui Zhang. METGEN: A Module-based Entailment Tree Generation Framework for Answer Explanation. Findings of NAACL 2022.</li>
 	<li>Jiaxin Bai, Zihao Wang, <b>Hongming Zhang</b>, and Yangqiu Song. Query2Particles: Knowledge Graph Reasoning with Particle Embeddings. Findings of NAACL 2022.</li>
