Upload NAACL 2022 papers

--- a/index.html
+++ b/index.html
@@ -310,6 +310,11 @@
 							</ul>
 						</span></div>
 			            <div><span style="">
+							<h2>Journal Publications</h2>
+							<p style="font-size:18px">2022</p>
+							<ul>
+								<li><b>Hongming Zhang*</b>, Xin Liu, Haojie Pan, Haowen Ke, Tianqing Fang, Jiefu Ou, Yangqiu Song. ASER: Towards Large-scale Commonsense Knowledge Acquisition via Higher-order Selectional Preference over Eventualities. Artificial Intelligence.</li>
+							</ul>
 
 
 							<h2>Conference Publications</h2>
