--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
 							<h2>Journal Publications</h2>
 							<p style="font-size:18px">2022</p>
 							<ul>
-								<li><b>Hongming Zhang*</b>, Xin Liu, Haojie Pan, Haowen Ke, Tianqing Fang, Jiefu Ou, Yangqiu Song. ASER: Towards Large-scale Commonsense Knowledge Acquisition via Higher-order Selectional Preference over Eventualities. Artificial Intelligence.</li>
+								<li><b>Hongming Zhang*</b>, Xin Liu*, Haojie Pan*, Haowen Ke, Tianqing Fang, Jiefu Ou, Yangqiu Song. ASER: Towards Large-scale Commonsense Knowledge Acquisition via Higher-order Selectional Preference over Eventualities. Artificial Intelligence.</li>
 							</ul>
 
 
