--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
                 <p style="font-size:22px;font-family:Georgia, &#39;Times New Roman&#39;, Times, serif"><b>News</b></p>
                 <div class="two-col-container">
                     <ul>
+						<li>11/2022: Invited to serve as the PC for CVPR 2023.</li>
                         <li>10/2022: Seven papers are accepted to EMNLP 2022 (including findings).</li>
                         <li>09/2022: Our paper "Learning Event Extraction From a Few Guideline Examples" has been
                             accepted to IEEE/ACM Transactions on Audio, Speech, and Language Processing.
@@ -384,6 +385,7 @@
 									Learning Event Extraction From a Few Guideline Examples.
 									IEEE/ACM Transactions on Audio, Speech, and Language Processing (TASLP). 2022.
 										<a href="https://ieeexplore.ieee.org/document/9868134">[PAPER]</a>
+								<a href="https://github.com/Raising-hrx/Few-Example-Event-Extraction">[CODE]</a>
 								</li>
 							</ul>
 
@@ -697,10 +699,10 @@
                         IEEE Transactions on Neural Networks and Learning Systems; NeuralComputing.
                     </li>
                     <li>
-                        Senior PC: IJCAI'21.
+                        Senior PC: AAAI'23, IJCAI'21.
                     </li>
                     <li>
-                        PC: ACL'21; EMNLP'21; NAACL'21; IJCAI'22; AAAI'21-22; COLING'20; AACL'20; CIKM'19; AKBC'21;
+                        PC: ACL'21-22; EMNLP'21-22; CVPR 22-23; NAACL'21-22; IJCAI'22; AAAI'21-22; COLING'20; AACL'20; CIKM'19; AKBC'21;
                         NLPCC'19,21.
                     </li>
                     <li>
