--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                                 You can find me at hzhangal [AT] cse.ust.hk or learn more about me with my <a
                                     href="https://scholar.google.com/citations?user=i5ETuuQAAAAJ&hl=en">Google
                                 Scholar</a>, <a href="https://github.com/panda0881">Github</a>, and <a
-                                    href="sources/CV.pdf">CV</a> (Aug, 2021).
+                                    href="sources/CV.pdf">CV</a> (Dec, 2022).
 
 
                             </p>
@@ -164,6 +164,7 @@
                 <p style="font-size:22px;font-family:Georgia, &#39;Times New Roman&#39;, Times, serif"><b>News</b></p>
                 <div class="two-col-container">
                     <ul>
+						<li>12/2022: Invited to serve as the PC for IJCAI 2032 and ACL 2023.</li>
 						<li>11/2022: Invited to serve as the PC for CVPR 2023.</li>
                         <li>10/2022: Seven papers are accepted to EMNLP 2022 (including findings).</li>
                         <li>09/2022: Our paper "Learning Event Extraction From a Few Guideline Examples" has been
@@ -702,7 +703,7 @@
                         Senior PC: AAAI'23, IJCAI'21.
                     </li>
                     <li>
-                        PC: ACL'21-22; EMNLP'21-22; CVPR 22-23; NAACL'21-22; IJCAI'22; AAAI'21-22; COLING'20; AACL'20; CIKM'19; AKBC'21;
+                        PC: ACL'21-23; EMNLP'21-22; CVPR 22-23; NAACL'21-22; IJCAI'22-23; AAAI'21-22; COLING'20; AACL'20; CIKM'19; AKBC'21;
                         NLPCC'19,21.
                     </li>
                     <li>
@@ -739,6 +740,9 @@
                     Experience</b></p>
                 <span style="">
 							<ul>
+								<li>
+									Senior Researcher, Tencent AI Lab, Seattle.</a>.
+								</li>
 								<li>
 									NLP Research Intern,
 									<a href="https://ai.tencent.com/ailab/zh/index">AI Lab, Tencent</a> (Oct 2018 - Jan 2019). Supervisor: <a
