--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
                 display: block;
             }
 
+
+
     </style>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -75,6 +77,8 @@
 		gtag('js', new Date());
 
 		gtag('config', 'UA-108065629-1');
+
+
     </script>
 
 
@@ -164,8 +168,15 @@
                 <p style="font-size:22px;font-family:Georgia, &#39;Times New Roman&#39;, Times, serif"><b>News</b></p>
                 <div class="two-col-container">
                     <ul>
-						<li>12/2022: Invited to serve as the PC for IJCAI 2032 and ACL 2023.</li>
-						<li>11/2022: Invited to serve as the PC for CVPR 2023.</li>
+                        <li>01/2022: Our paper "Knowledge-in-Context: Towards Knowledgeable Semi-Parametric Language
+                            Models" has been accepted as ICLR 2023 Spotlight.
+                        </li>
+                        <li>01/2022: Four papers have been accepted by EACL 2023. Topics including event relation
+                            extraction, commonsense reasoning, event argument extraction, and sentence key semantics
+                            identification.
+                        </li>
+                        <li>12/2022: Invited to serve as the PC for IJCAI 2032 and ACL 2023.</li>
+                        <li>11/2022: Invited to serve as the PC for CVPR 2023.</li>
                         <li>10/2022: Seven papers are accepted to EMNLP 2022 (including findings).</li>
                         <li>09/2022: Our paper "Learning Event Extraction From a Few Guideline Examples" has been
                             accepted to IEEE/ACM Transactions on Audio, Speech, and Language Processing.
@@ -392,6 +403,39 @@
 
 
 							<h2>Conference Publications</h2>
+												<p style="font-size:18px">2023</p>
+
+<ul>
+
+	<li>Xiaoman Pan, Wenlin Yao, <b>Hongming Zhang</b>, Dian Yu, Dong Yu, and Jianshu Chen.
+							Knowledge-in-Context: Towards Knowledgeable Semi-Parametric Language Models.
+							ICLR 2023.
+							<a href="https://arxiv.org/pdf/2210.16433.pdf">[PAPER]</a>
+						</li>
+						<li>
+							Haoyu Wang, <b>Hongming Zhang</b>, Yuqian Deng, Jacob R Gardner, Muhao Chen, and Dan Roth.
+							Extracting or guessing? improving faithfulness of event temporal relation extraction.
+							EACL 2023.
+							<a href="https://arxiv.org/pdf/2210.04992.pdf">[PAPER]</a>
+						</li>
+						<li>
+							Wenlin Yao, Lifeng Jin, <b>Hongming Zhang</b>, Xiaoman Pan, Kaiqiang Song, Dian Yu, Dong Yu, and Jianshu Chen
+							How do Words Contribute to Sentence Semantics? Revisiting Sentence Embeddings with a Perturbation Method.
+							Findings of EACL 2023.
+						</li>
+						<li>
+							<b>Hongming Zhang</b>, Yintong Huo, Yanai Elazar, Yangqiu Song, Yoav Goldberg, and Dan Roth.
+							CIKQA: Learning Commonsense Inference with a Unified Knowledge-in-the-loop QA Paradigm.
+							Findings of EACL 2023.
+							<a href="https://arxiv.org/abs/2210.06246">[PAPER]</a>
+							<a href="https://github.com/CogComp/CIKQA">[CODE & DATA]</a>
+						</li>
+						<li>
+							Zizheng Lin, <b>Hongming Zhang</b>, and Yangqiu Song.
+							Global Constraints with Prompting for Zero-Shot Event Argument Classification.
+							Findings of EACL 2023.
+						</li>
+	</ul>
 							<p style="font-size:18px">2022</p>
 
 <ul>
@@ -399,31 +443,45 @@
 	<li>Yinya Huang, <b>Hongming Zhang</b>, Ruixin Hong, Xiaodan Liang, Changshui Zhang, and Dong Yu
 		MetaLogic: Logical Reasoning Explanations with Fine-Grained Structure.
 		Conference on Empirical Methods in Natural Language Processing (EMNLP). 2022.
+		<a href="https://arxiv.org/abs/2210.12487">[PAPER]</a>
+		<a href="https://github.com/tencent-ailab/MetaLogic">[DATA & CODE]</a>
 	</li>
 	<li>Zhaowei Wang, <b>Hongming Zhang</b>, Tianqing Fang, Yangqiu Song, Ginny Y. Wong, and Simon See.
-		SubeventWriter: Iterative Sub-event Sequence Generation with Coherence Controller
+		SubeventWriter: Iterative Sub-event Sequence Generation with Coherence Controller.
 		Conference on Empirical Methods in Natural Language Processing (EMNLP). 2022.
+		<a href="https://arxiv.org/pdf/2210.06694.pdf">[PAPER]</a>
+		<a href="https://github.com/HKUST-KnowComp/SubeventWriter">[CODE]</a>
 	</li>
 	<li>Fei Wang, Kaiqiang Song, <b>Hongming Zhang</b>, Lifeng Jin, Sangwoo Cho, Wenlin Yao, Xiaoyang Wang, Muhao Chen, and Dong Yu.
 		Salience Allocation as Guidance for Abstractive Summarization.
 		Conference on Empirical Methods in Natural Language Processing (EMNLP). 2022.
+		<a href="https://arxiv.org/abs/2210.12330">[PAPER]</a>
+		<a href="https://github.com/tencent-ailab/season">[CODE]</a>
 	</li>
 	<li>Yue Yang, Wenlin Yao, <b>Hongming Zhang</b>, Xiaoyang Wang, Dong Yu, and Jianshu Chen.
 		Z-LaVI: Zero-Shot Language Solver Fueled by Visual Imagination.
 		Conference on Empirical Methods in Natural Language Processing (EMNLP). 2022.
+		<a href="https://arxiv.org/abs/2210.12261">[PAPER]</a>
+		<a href="https://github.com/YueYANG1996/Z-LaVI">[CODE]</a>
 	</li>
 
 	<li>	<b>Hongming Zhang</b>, Wenlin Yao, and Dong Yu.
 		Efficient Zero-shot Event Extraction with Context-Definition Alignment.
 		Findings of Conference on Empirical Methods in Natural Language Processing (EMNLP). 2022.
+		<a href="https://arxiv.org/pdf/2210.07988.pdf">[PAPER]</a>
+		<a href="https://github.com/tencent-ailab/ZED">[CODE]</a>
 	</li>
 	<li>	Tianqing Fang, Quyet V. Do, <b>Hongming Zhang</b>, Yangqiu Song, Ginny Y. Wong, and Simon See.
 		PseudoReasoner: Leveraging Pseudo Labels for Commonsense Knowledge Base Population.
 		Findings of Conference on Empirical Methods in Natural Language Processing (EMNLP). 2022.
+		<a href="https://arxiv.org/pdf/2211.05156.pdf">[PAPER]</a>
+		<a href="https://github.com/HKUST-KnowComp/PseudoReasoner">[CODE]</a>
 	</li>
 	<li>	Ying Su, Zihao Wang, Tianqing Fang, <b>Hongming Zhang</b>, Yangqiu Song, and Tong Zhang
 		MICO: A Multi-alternative Contrastive Learning Framework for Commonsense Knowledge Representation.
 		Findings of Conference on Empirical Methods in Natural Language Processing (EMNLP). 2022.
+		<a href="https://arxiv.org/pdf/2210.07570.pdf">[PAPER]</a>
+		<a href="https://github.com/HKUST-KnowComp/MICO">[CODE]</a>
 	</li>
 
 
@@ -703,7 +761,8 @@
                         Senior PC: AAAI'23, IJCAI'21.
                     </li>
                     <li>
-                        PC: ACL'21-23; EMNLP'21-22; CVPR 22-23; NAACL'21-22; IJCAI'22-23; AAAI'21-22; COLING'20; AACL'20; CIKM'19; AKBC'21;
+                        PC: ACL'21-23; EMNLP'21-22; CVPR 22-23; NAACL'21-22; IJCAI'22-23; AAAI'21-22; COLING'20;
+                        AACL'20; CIKM'19; AKBC'21;
                         NLPCC'19,21.
                     </li>
                     <li>
@@ -822,6 +881,8 @@
                     }
                 }
             }
+
+
 </script>
 
 
