--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
                 <p style="font-size:22px;font-family:Georgia, &#39;Times New Roman&#39;, Times, serif"><b>News</b></p>
                 <div class="two-col-container">
                     <ul>
+						<li>05/2022: Two papers about event causal relation induction and faithful reasoning with LM are accepted to ACL 2023 main conferences.</li>
                         <li>01/2022: Our paper "Knowledge-in-Context: Towards Knowledgeable Semi-Parametric Language
                             Models" has been accepted as ICLR 2023 Spotlight.
                         </li>
@@ -406,6 +407,13 @@
 												<p style="font-size:18px">2023</p>
 
 <ul>
+	<li>Ruixin Hong, <b>Hongming Zhang</b>, Hong Zhao, Dong Yu and Changshui Zhang. Faithful Question Answering with Monte-Carlo Planning. ACL 2023.
+
+	</li>
+	<li>
+		Zhaowei Wang, Quyet V. Do, <b>Hongming Zhang</b>, Jiayao Zhang, Weiqi Wang, Tianqing Fang, Yangqiu Song, Ginny Y. Wong and Simon See. COLA: Contextualized Commonsense Causality Reasoning from the Causal Inference Perspective. ACL 2023.
+
+	</li>
 
 	<li>Xiaoman Pan, Wenlin Yao, <b>Hongming Zhang</b>, Dian Yu, Dong Yu, and Jianshu Chen.
 							Knowledge-in-Context: Towards Knowledgeable Semi-Parametric Language Models.
