--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
                 <p style="font-size:22px;font-family:Georgia, &#39;Times New Roman&#39;, Times, serif"><b>News</b></p>
                 <div class="two-col-container">
                     <ul>
+						<li>05/2023: Invited to serve as the Area Chair for AACL 2023.</li>
 						<li>05/2022: Two papers about event causal relation induction and faithful reasoning with LM are accepted to ACL 2023 main conferences.</li>
                         <li>01/2022: Our paper "Knowledge-in-Context: Towards Knowledgeable Semi-Parametric Language
                             Models" has been accepted as ICLR 2023 Spotlight.
@@ -769,6 +770,7 @@
                         Senior PC: AAAI'23, IJCAI'21.
                     </li>
                     <li>
+						Area Chair: AACL'23.
                         PC: ACL'21-23; EMNLP'21-22; CVPR 22-23; NAACL'21-22; IJCAI'22-23; AAAI'21-22; COLING'20;
                         AACL'20; CIKM'19; AKBC'21;
                         NLPCC'19,21.
