--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
                 <p style="font-size:22px;font-family:Georgia, &#39;Times New Roman&#39;, Times, serif"><b>News</b></p>
                 <div class="two-col-container">
                     <ul>
+						<li>05/2023: Invited to serve as the reviewer for EMNLP 2023.</li>
 						<li>05/2023: Invited to serve as the Area Chair for AACL 2023.</li>
 						<li>05/2022: Two papers about event causal relation induction and faithful reasoning with LM are accepted to ACL 2023 main conferences.</li>
                         <li>01/2022: Our paper "Knowledge-in-Context: Towards Knowledgeable Semi-Parametric Language
