--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
                 <p style="font-size:22px;font-family:Georgia, &#39;Times New Roman&#39;, Times, serif"><b>News</b></p>
                 <div class="two-col-container">
                     <ul>
+						<li>07/2023: Our paper "Video State-changing Object Segmentation" has been accepted to ICCV 2023.</li>
 						<li>05/2023: Invited to serve as the reviewer for EMNLP 2023.</li>
 						<li>05/2023: Invited to serve as the Area Chair for AACL 2023.</li>
 						<li>05/2022: Two papers about event causal relation induction and faithful reasoning with LM are accepted to ACL 2023 main conferences.</li>
@@ -409,6 +410,9 @@
 												<p style="font-size:18px">2023</p>
 
 <ul>
+	<li>Xiang Li, Jiangwei Yu, Xinran Zhao, <b>Hongming Zhang</b>, and Yu-Xiong Wang. Video State-changing Object Segmentation. ICCV 2023.
+
+	</li>
 	<li>Ruixin Hong, <b>Hongming Zhang</b>, Hong Zhao, Dong Yu and Changshui Zhang. Faithful Question Answering with Monte-Carlo Planning. ACL 2023.
 
 	</li>
