--- a/index.html
+++ b/index.html
@@ -168,6 +168,8 @@
                 <p style="font-size:22px;font-family:Georgia, &#39;Times New Roman&#39;, Times, serif"><b>News</b></p>
                 <div class="two-col-container">
                     <ul>
+						<li>10/2023: Five papers are accepted to EMNLP 2023. Topics including Open-world Information Extraction, Sentence Embedding for Information Retrieval, and story-level commonsense reasoning.</li>
+						<li>09/2023: Our paper "Thrust: Adaptively Propels Large Language Models with External Knowledge" has been accepted to Neurips 2023.</li>
 						<li>07/2023: Our paper "Video State-changing Object Segmentation" has been accepted to ICCV 2023.</li>
 						<li>05/2023: Invited to serve as the reviewer for EMNLP 2023.</li>
 						<li>05/2023: Invited to serve as the Area Chair for AACL 2023.</li>
@@ -410,6 +412,21 @@
 												<p style="font-size:18px">2023</p>
 
 <ul>
+<li>Haoyu Wang, <b>Hongming Zhang</b>, Yueguan Wang, Yuqian Deng, Muhao Chen, Dan Roth. Are All Steps Equally Important? Benchmarking Essentiality Detection of Events. EMNLP 2023.
+	</li>
+	<li>Hongwei Wang, <b>Hongming Zhang</b>, and Dong Yu. On the Dimensionality of Sentence Embeddings. Findings of EMNLP 2023.
+	</li>
+	<li>Keming Lu, Xiaoman Pan, Kaiqiang Song, <b>Hongming Zhang</b>, Dong Yu, and Jianshu Chen.
+PIVOINE: Instruction Tuning for Open-world Information Extraction. Findings of EMNLP 2023.
+	</li>
+	<li>Jiayang Cheng, Lin Qiu, Tsz Ho CHAN, Tianqing Fang, Weiqi Wang, Chunkit Chan, Qipeng Guo, <b>Hongming Zhang</b>, Yangqiu Song, Yue Zhang, Zheng Zhang. STORYANALOGY: Deriving Story-level Analogies from Large Language Models to Unlock Analogical Understanding. EMNLP 2023.
+	</li>
+	<li>James Y. Huang, Wenlin Yao, Kaiqiang Song, <b>Hongming Zhang</b>, Muhao Chen, Dong Yu. Bridging Continuous and Discrete Spaces: Interpretable Sentence Representation Learning via Compositional Operations. EMNLP 2023.
+
+	</li>
+	<li>Xinran Zhao, <b>Hongming Zhang</b>, Xiaoman Pan, Wenlin Yao, Dong Yu, and Jianshu Chen. Thrust: Adaptively Propels Large Language Models with External Knowledge. Neurips 2023.
+
+	</li>
 	<li>Xiang Li, Jiangwei Yu, Xinran Zhao, <b>Hongming Zhang</b>, and Yu-Xiong Wang. Video State-changing Object Segmentation. ICCV 2023.
 
 	</li>
